--- a/imagebind.ipynb
+++ b/imagebind.ipynb
@@ -813,6 +813,589 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MSCOCO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/sailhome/yuhuiz/develop/miniconda3/envs/modeldiff/lib/python3.9/site-packages/torchvision/transforms/_functional_video.py:6: UserWarning: The 'torchvision.transforms._functional_video' module is deprecated since 0.12 and will be removed in the future. Please use the 'torchvision.transforms.functional' module instead.\n",
+      "  warnings.warn(\n",
+      "/sailhome/yuhuiz/develop/miniconda3/envs/modeldiff/lib/python3.9/site-packages/torchvision/transforms/_transforms_video.py:22: UserWarning: The 'torchvision.transforms._transforms_video' module is deprecated since 0.12 and will be removed in the future. Please use the 'torchvision.transforms' module instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import random\n",
+    "from tqdm import tqdm, trange\n",
+    "import data\n",
+    "import torch\n",
+    "from models import imagebind_model\n",
+    "from models.imagebind_model import ModalityType\n",
+    "import torch.nn.functional as F\n",
+    "import json\n",
+    "\n",
+    "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
+    "\n",
+    "COCO_PATH = \"/pasteur/u/yuhuiz/data/COCO/\"\n",
+    "\n",
+    "captions_train = json.load(open(COCO_PATH + \"annotations/captions_train2017.json\"))\n",
+    "captions_val = json.load(open(COCO_PATH + \"annotations/captions_val2017.json\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### CLIP\n",
+    "import torch\n",
+    "import clip\n",
+    "from PIL import Image\n",
+    "\n",
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "model, preprocess = clip.load(\"ViT-B/32\", device=device)\n",
+    "model = model.eval()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model loaded\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instantiate model\n",
+    "model = imagebind_model.imagebind_huge(pretrained=True)\n",
+    "model.eval()\n",
+    "model.to(device)\n",
+    "print(\"Model loaded\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'license': 3, 'file_name': '000000391895.jpg', 'coco_url': 'http://images.cocodataset.org/train2017/000000391895.jpg', 'height': 360, 'width': 640, 'date_captured': '2013-11-14 11:18:45', 'flickr_url': 'http://farm9.staticflickr.com/8186/8119368305_4e622c8349_z.jpg', 'id': 391895}\n",
+      "/pasteur/u/yuhuiz/data/COCO/images/train2017/000000391895.jpg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3853/3853 [17:39<00:00,  3.64it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "616767 A bicycle replica with a clock as the front wheel.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 19274/19274 [05:08<00:00, 62.42it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_images = captions_train[\"images\"] + captions_val[\"images\"]\n",
+    "print(all_images[0])\n",
+    "all_image_filenames = [\"/pasteur/u/yuhuiz/data/COCO/images/\" + img[\"coco_url\"].replace(\"http://images.cocodataset.org/\", \"\") for img in all_images]\n",
+    "print(all_image_filenames[0])\n",
+    "\n",
+    "image_embeddings = []\n",
+    "\n",
+    "batch_size = 32\n",
+    "for i in trange(0, len(all_images), batch_size):\n",
+    "    # with torch.no_grad():\n",
+    "    #     # Load data\n",
+    "    #     inputs = {\n",
+    "    #         ModalityType.VISION: data.load_and_transform_vision_data(all_image_filenames[i: i + batch_size], device),\n",
+    "    #     }\n",
+    "    #     embeddings = model(inputs)\n",
+    "    #     image_embeddings.append(embeddings[ModalityType.VISION].cpu())\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        image = torch.stack([preprocess(Image.open(im)) for im in all_image_filenames[i: i + batch_size]]).to(device)\n",
+    "        image_features = model.encode_image(image)\n",
+    "        image_embeddings.append(image_features.cpu())\n",
+    "        # text_features = model.encode_text(text)\n",
+    "\n",
+    "image_embeddings = torch.cat(image_embeddings, dim=0)\n",
+    "torch.save([all_image_filenames, image_embeddings], \"image_embeddings_coco_clip.pt\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "annotations = captions_train[\"annotations\"] + captions_val[\"annotations\"]\n",
+    "captions = [annotation[\"caption\"] for annotation in annotations]\n",
+    "print(len(captions), captions[0])\n",
+    "\n",
+    "text_embeddings = []\n",
+    "\n",
+    "batch_size = 32\n",
+    "for i in trange(0, len(captions), batch_size):\n",
+    "    # with torch.no_grad():\n",
+    "    #     # Load data\n",
+    "    #     inputs = {\n",
+    "    #         ModalityType.TEXT: data.load_and_transform_text(captions[i: i + batch_size], device),\n",
+    "    #     }\n",
+    "    #     embeddings = model(inputs)\n",
+    "    #     text_embeddings.append(embeddings[ModalityType.TEXT].cpu())\n",
+    "\n",
+    "    with torch.no_grad():\n",
+    "        text = clip.tokenize(captions[i: i + batch_size]).to(device)\n",
+    "        text_features = model.encode_text(text)\n",
+    "        text_embeddings.append(text_features.cpu())\n",
+    "\n",
+    "\n",
+    "text_embeddings = torch.cat(text_embeddings, dim=0)\n",
+    "torch.save([captions, text_embeddings], \"text_embeddings_coco_clip.pt\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "63 6\n",
+      "126 6\n",
+      "619 6\n",
+      "818 6\n",
+      "1205 6\n",
+      "1331 6\n",
+      "1611 6\n",
+      "1753 6\n",
+      "2064 6\n",
+      "2114 6\n",
+      "2193 6\n",
+      "2395 6\n",
+      "2939 6\n",
+      "3127 6\n",
+      "3305 6\n",
+      "3533 6\n",
+      "3550 6\n",
+      "3942 6\n",
+      "4200 6\n",
+      "4396 6\n",
+      "4947 6\n",
+      "5227 6\n",
+      "7459 6\n",
+      "7482 6\n",
+      "8156 6\n",
+      "8263 6\n",
+      "8466 6\n",
+      "9010 6\n",
+      "9268 6\n",
+      "9350 6\n",
+      "9441 6\n",
+      "10244 6\n",
+      "10528 6\n",
+      "10548 6\n",
+      "10761 6\n",
+      "10946 6\n",
+      "11143 6\n",
+      "11504 6\n",
+      "11930 6\n",
+      "12048 6\n",
+      "12513 6\n",
+      "12572 6\n",
+      "12638 6\n",
+      "13166 6\n",
+      "13829 6\n",
+      "13988 6\n",
+      "14621 6\n",
+      "15050 6\n",
+      "15097 6\n",
+      "15247 6\n",
+      "15451 6\n",
+      "15601 6\n",
+      "15603 6\n",
+      "15783 6\n",
+      "16719 6\n",
+      "16730 6\n",
+      "17440 6\n",
+      "17657 6\n",
+      "18158 6\n",
+      "18200 6\n",
+      "18938 6\n",
+      "19145 6\n",
+      "19963 6\n",
+      "21319 6\n",
+      "21411 6\n",
+      "21611 6\n",
+      "21818 6\n",
+      "21932 6\n",
+      "22206 6\n",
+      "22268 6\n",
+      "22570 7\n",
+      "23322 6\n",
+      "23859 6\n",
+      "24063 6\n",
+      "24448 6\n",
+      "24498 6\n",
+      "24509 6\n",
+      "24518 6\n",
+      "25208 6\n",
+      "26268 6\n",
+      "26402 6\n",
+      "26473 6\n",
+      "26728 6\n",
+      "26737 6\n",
+      "26925 6\n",
+      "27203 6\n",
+      "27391 6\n",
+      "27576 6\n",
+      "27593 6\n",
+      "27605 6\n",
+      "27703 6\n",
+      "27770 6\n",
+      "28082 6\n",
+      "28556 6\n",
+      "28623 6\n",
+      "28657 7\n",
+      "28888 6\n",
+      "29290 6\n",
+      "29343 6\n",
+      "29620 6\n",
+      "29697 6\n",
+      "30469 6\n",
+      "30572 6\n",
+      "30818 6\n",
+      "31408 6\n",
+      "31704 6\n",
+      "31786 6\n",
+      "31920 6\n",
+      "32375 6\n",
+      "32996 6\n",
+      "33300 6\n",
+      "33417 6\n",
+      "33474 6\n",
+      "33629 6\n",
+      "33741 6\n",
+      "34260 6\n",
+      "35009 6\n",
+      "35499 6\n",
+      "35563 6\n",
+      "35814 6\n",
+      "36579 6\n",
+      "36844 6\n",
+      "37083 6\n",
+      "37290 6\n",
+      "37689 6\n",
+      "37713 6\n",
+      "38251 6\n",
+      "38640 6\n",
+      "38830 6\n",
+      "39206 6\n",
+      "39476 6\n",
+      "39713 6\n",
+      "39956 6\n",
+      "40529 6\n",
+      "40660 6\n",
+      "40909 6\n",
+      "41005 6\n",
+      "41521 6\n",
+      "42079 6\n",
+      "42835 6\n",
+      "43413 6\n",
+      "44310 6\n",
+      "44808 6\n",
+      "45097 6\n",
+      "45197 6\n",
+      "45341 6\n",
+      "46429 6\n",
+      "46469 6\n",
+      "46575 6\n",
+      "46618 6\n",
+      "47146 6\n",
+      "47390 6\n",
+      "48357 6\n",
+      "48789 6\n",
+      "49548 6\n",
+      "49625 7\n",
+      "50616 6\n",
+      "50724 6\n",
+      "51154 6\n",
+      "51325 6\n",
+      "51629 6\n",
+      "52540 6\n",
+      "53580 6\n",
+      "53666 6\n",
+      "53954 6\n",
+      "54788 6\n",
+      "55058 6\n",
+      "55133 6\n",
+      "56545 6\n",
+      "57125 6\n",
+      "57581 6\n",
+      "57659 6\n",
+      "58908 6\n",
+      "59672 6\n",
+      "60382 6\n",
+      "60584 6\n",
+      "61225 6\n",
+      "61424 6\n",
+      "61515 6\n",
+      "61870 6\n",
+      "63418 6\n",
+      "63432 6\n",
+      "65719 6\n",
+      "65892 6\n",
+      "65945 6\n",
+      "66468 6\n",
+      "66679 6\n",
+      "67095 6\n",
+      "67528 6\n",
+      "67669 6\n",
+      "67803 6\n",
+      "67978 6\n",
+      "67998 6\n",
+      "68136 6\n",
+      "69360 6\n",
+      "69855 6\n",
+      "70204 6\n",
+      "72031 6\n",
+      "72238 6\n",
+      "72516 6\n",
+      "73390 6\n",
+      "73622 6\n",
+      "74546 6\n",
+      "75102 6\n",
+      "75689 6\n",
+      "75861 6\n",
+      "75939 6\n",
+      "77006 6\n",
+      "77024 6\n",
+      "77033 6\n",
+      "77304 6\n",
+      "77634 6\n",
+      "77658 6\n",
+      "77721 6\n",
+      "77754 6\n",
+      "77834 6\n",
+      "78267 6\n",
+      "78427 6\n",
+      "78747 6\n",
+      "79097 6\n",
+      "79935 6\n",
+      "80093 6\n",
+      "80568 6\n",
+      "81944 6\n",
+      "82219 6\n",
+      "82242 6\n",
+      "83019 6\n",
+      "84022 6\n",
+      "84188 6\n",
+      "84367 6\n",
+      "85428 6\n",
+      "85868 6\n",
+      "86016 6\n",
+      "86974 6\n",
+      "87733 6\n",
+      "88099 6\n",
+      "88381 6\n",
+      "88441 6\n",
+      "88459 6\n",
+      "89043 6\n",
+      "89109 6\n",
+      "90203 6\n",
+      "90291 6\n",
+      "90523 6\n",
+      "90654 6\n",
+      "90938 6\n",
+      "91353 6\n",
+      "91712 6\n",
+      "92438 6\n",
+      "92589 6\n",
+      "93061 6\n",
+      "94257 6\n",
+      "94935 6\n",
+      "96198 6\n",
+      "97051 6\n",
+      "97277 6\n",
+      "97340 6\n",
+      "97435 6\n",
+      "98204 6\n",
+      "98479 6\n",
+      "99039 6\n",
+      "99383 6\n",
+      "99650 6\n",
+      "99674 6\n",
+      "99880 6\n",
+      "99958 6\n",
+      "100118 6\n",
+      "100693 6\n",
+      "100904 6\n",
+      "101009 6\n",
+      "101194 6\n",
+      "101398 6\n",
+      "101404 6\n",
+      "102468 6\n",
+      "102741 6\n",
+      "103779 6\n",
+      "104031 6\n",
+      "104549 6\n",
+      "105241 6\n",
+      "105512 6\n",
+      "105803 6\n",
+      "106019 6\n",
+      "106160 6\n",
+      "106232 6\n",
+      "106566 6\n",
+      "107044 6\n",
+      "107278 6\n",
+      "107393 6\n",
+      "107647 6\n",
+      "107983 6\n",
+      "108458 6\n",
+      "108487 6\n",
+      "108646 6\n",
+      "108690 6\n",
+      "108799 6\n",
+      "109185 6\n",
+      "110853 6\n",
+      "111263 6\n",
+      "111466 6\n",
+      "111801 6\n",
+      "111850 6\n",
+      "112217 6\n",
+      "112337 6\n",
+      "114323 6\n",
+      "114351 6\n",
+      "114377 6\n",
+      "114813 6\n",
+      "114828 6\n",
+      "115649 6\n",
+      "115838 6\n",
+      "116221 6\n",
+      "117047 6\n",
+      "117105 6\n",
+      "117294 6\n",
+      "117648 6\n",
+      "102 6\n",
+      "592 6\n",
+      "602 6\n",
+      "982 6\n",
+      "987 6\n",
+      "1565 7\n",
+      "1723 6\n",
+      "1726 6\n",
+      "1773 6\n",
+      "3661 6\n",
+      "3736 6\n",
+      "4561 6\n",
+      "4669 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "imageid2image = {}\n",
+    "\n",
+    "for item in captions_train[\"images\"] + captions_val[\"images\"]:\n",
+    "    imageid2image[item[\"id\"]] = item\n",
+    "    item[\"captions\"] = []\n",
+    "\n",
+    "for ann in captions_train[\"annotations\"] + captions_val[\"annotations\"]:\n",
+    "    image_id = ann['image_id']\n",
+    "    caption = ann['caption']\n",
+    "    image = imageid2image[image_id]\n",
+    "    image[\"captions\"].append(caption)\n",
+    "\n",
+    "\n",
+    "\n",
+    "all_image_filenames, image_embeddings = torch.load(\"image_embeddings_coco_clip.pt\")\n",
+    "captions, text_embeddings = torch.load(\"text_embeddings_coco_clip.pt\")\n",
+    "image_embeddings = image_embeddings.float()\n",
+    "text_embeddings = text_embeddings.float()\n",
+    "\n",
+    "image2embeddings = dict(zip(all_image_filenames, image_embeddings))\n",
+    "text2embeddings = dict(zip(captions, text_embeddings))\n",
+    "\n",
+    "\n",
+    "# transform to x_embed (audio embedding), y_embed (caption embedding), y (caption)\n",
+    "train_data = []\n",
+    "\n",
+    "for idx, item in enumerate(captions_train[\"images\"]):\n",
+    "    captions = item[\"captions\"]\n",
+    "    file_name = \"/pasteur/u/yuhuiz/data/COCO/images/\" + item[\"coco_url\"].replace(\"http://images.cocodataset.org/\", \"\")\n",
+    "    if len(captions) != 5:\n",
+    "        print(idx, len(captions))\n",
+    "\n",
+    "    for i in range(5): # 5 captions\n",
+    "        train_data.append({\n",
+    "            \"x\": file_name,\n",
+    "            \"y\": captions[i],\n",
+    "            \"x_embed\": F.normalize(image2embeddings[file_name], dim=0).numpy(),\n",
+    "            \"y_embed\": F.normalize(text2embeddings[captions[i]], dim=0).numpy(),\n",
+    "            \"split\": \"train\"\n",
+    "        })\n",
+    "\n",
+    "test_data = []\n",
+    "\n",
+    "for idx, item in enumerate(captions_val[\"images\"]):\n",
+    "    captions = item[\"captions\"]\n",
+    "    file_name = \"/pasteur/u/yuhuiz/data/COCO/images/\" + item[\"coco_url\"].replace(\"http://images.cocodataset.org/\", \"\")\n",
+    "    if len(captions) != 5:\n",
+    "        print(idx, len(captions))\n",
+    "\n",
+    "    for i in range(5): # 5 captions\n",
+    "        test_data.append({\n",
+    "            \"x\": file_name,\n",
+    "            \"y\": captions[i],\n",
+    "            \"x_embed\": F.normalize(image2embeddings[file_name], dim=0).numpy(),\n",
+    "            \"y_embed\": F.normalize(text2embeddings[captions[i]], dim=0).numpy(),\n",
+    "            \"split\": \"test\"\n",
+    "        })\n",
+    "\n",
+    "\n",
+    "data = train_data + test_data\n",
+    "\n",
+    "import pickle \n",
+    "with open('data_image_coco_clip.pkl', 'wb') as f:\n",
+    "    pickle.dump(data, f)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
